--- a/ui/src/app/views/workspace-list/component.html
+++ b/ui/src/app/views/workspace-list/component.html
@@ -39,7 +39,7 @@
         May take a few minutes
       </p>
     </div>
-    <div class="card" *ngFor="let workspaceResponse of workspaceList" routerLink="/workspace/{{workspaceResponse.workspace.namespace}}/{{workspaceResponse.workspace.id}}">
+    <div class="card" *ngFor="let workspaceResponse of workspaceList" routerLink="{{workspaceResponse.workspace.namespace}}/{{workspaceResponse.workspace.id}}">
       <h5 class="workspace-name">{{workspaceResponse.workspace.name}}</h5>
       <div class="description">{{workspaceResponse.workspace.description}}</div>
       <div class="status-text">
