--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -30,10 +30,11 @@
         </span>
         <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-left">
           <button *ngIf="tabOpen===Tabs.Notebooks" class="btn btn-primary btn-create"
-                  [disabled]="clusterLoading || awaitingReview" (click)="newNotebook()">
+                  [disabled]="clusterLoading || awaitingReview || !writePermission" (click)="newNotebook()">
             + New Notebook
           </button>
           <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
+          <span *ngIf="!writePermission" class="tooltip-content">Write permission required to create notebooks</span>
           <span *ngIf="cluster && clusterLoading" class="tooltip-content">
             Your notebook server is still being initialized - this may take up
             to 5 minutes. Please try again later.
