--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -7,16 +7,18 @@
       <p class="view-sub-title">{{subTitle}} </p>
     </div>
 
-    <div class="white-card-box" >
-      <div class="row search">
-        <div class="col-xs-12 flex-xs-middle search-input-full ">
+    <div class="white-card-box flex-items-xs-middle" >
+      <div class="row search flex-items-xs-between">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 flex-xs-middle search-input-full">
           <div class="search-wrapper">
             <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
-            <input type="text" id="search-db" placeholder="Keyword Search" [(ngModel)]="searchText">
+            <input type="text" id="search-db" placeholder="Keyword Search" [(ngModel)]="searchText" (ngModelChange)="searchDomains()">
           </div>
         </div>
+
       </div>
 
+     <!-- Filters none now
       <div class="row">
         <div class="col-sm-6 col-xs-12">
 
@@ -54,39 +56,74 @@
         </div>
       </div>
 
+
       <div class="row">
         <div class="col-xs">
           <button class="btn btn-primary search" (click)="searchDomains()">Search</button>
         </div>
       </div>
+      -->
     </div>
-
-    <h4 class="box-heading"> Search Results </h4>
-
+    <div class="db-page-spinner" *ngIf="loading" >
+      <span  class="spinner spinner-inline">
+        Loading...
+      </span>
+    </div>
+    <h5 class="box-heading"> EHR Domains: </h5>
     <div class="row" >
 
+      <div class="col-md-3 col-sm-4 col-xs-12" *ngFor="let r of domainResults">
+          <div class="white-card-box search-result">
+            <h5 class="box-title" *ngIf="r.dbType === 'domain_filter'">
+              {{r.domainDisplay}}
+            </h5>
+            <h5 class="box-title" *ngIf="r.dbType === 'survey'">
+              Survey: {{r.domainDisplay}}
+            </h5>
+            <div class="card-stat">
+              {{r.countValue | number}}
+            </div>
+            <p *ngIf="r.dbType === 'domain_filter'" class="card-text bigger">
+              There are {{r.countValue | number}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
+              total participants.
+            </p>
+            <p *ngIf="r.dbType === 'survey'" class="card-text bigger">
+              There are {{r.countValue }} survey questions on this survey related to your search.
+            </p>
 
-          <div class="col-sm-4 col-xs-12" *ngFor="let r of searchResults">
-              <div class="white-card-box search-result">
-                <h5 class="box-title">
-                  {{r.domainDisplay}}
-                </h5>
-                <div class="card-stat">
-                  {{r.countValue | number}}
-                </div>
-                <p *ngIf="r.dbType === 'domain_filter'" class="card-text bigger">
-                  There are {{r.countValue | number}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
-                  total participants.
-                </p>
-                <p *ngIf="r.dbType === 'survey'" class="card-text bigger">
-                  There are {{r.countValue }} survey questions on this survey related to your search.
-                </p>
-
-                <div>
-                  <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
-                </div>
-              </div>
+            <div>
+              <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
+            </div>
           </div>
+      </div>
+    </div>
+
+    <h5 class="box-heading"> Surveys:  </h5>
+    <div class="row" >
+      <div class="col-md-3 col-sm-4 col-xs-12" *ngFor="let r of surveyResults">
+        <div class="white-card-box search-result">
+          <h5 class="box-title" *ngIf="r.dbType === 'domain_filter'">
+            {{r.domainDisplay}}
+          </h5>
+          <h5 class="box-title" *ngIf="r.dbType === 'survey'">
+            Survey: {{r.domainDisplay}}
+          </h5>
+          <div class="card-stat">
+            {{r.countValue | number}}
+          </div>
+          <p *ngIf="r.dbType === 'domain_filter'" class="card-text bigger">
+            There are {{r.countValue | number}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
+            total participants.
+          </p>
+          <p *ngIf="r.dbType === 'survey'" class="card-text bigger">
+            There are {{r.countValue }} survey questions on this survey related to your search.
+          </p>
+
+          <div>
+            <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
+          </div>
+        </div>
+      </div>
 
 
 
