--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -18,7 +18,7 @@
           placeholder="Workspace Name">
       <span style="display: inline-block; vertical-align: bottom">
         <div>Billing Account:</div>
-        <div>National Institute of Health:</div>
+        <div>National Institute of Health</div>
       </span>
     </div>
     <div>
