--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -69,28 +69,21 @@
         Loading...
       </span>
     </div>
+
     <h5 class="box-heading"> EHR Domains: </h5>
     <div class="row" >
-
       <div class="col-md-3 col-sm-4 col-xs-12" *ngFor="let r of domainResults">
           <div class="white-card-box search-result">
-            <h5 class="box-title" *ngIf="r.dbType === 'domain_filter'">
+            <h5 class="box-title">
               {{r.domainDisplay}}
-            </h5>
-            <h5 class="box-title" *ngIf="r.dbType === 'survey'">
-              Survey: {{r.domainDisplay}}
             </h5>
             <div class="card-stat">
               {{r.countValue | number}}
             </div>
-            <p *ngIf="r.dbType === 'domain_filter'" class="card-text bigger">
+            <p class="card-text bigger">
               There are {{r.countValue | number}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
               total participants.
             </p>
-            <p *ngIf="r.dbType === 'survey'" class="card-text bigger">
-              There are {{r.countValue }} survey questions on this survey related to your search.
-            </p>
-
             <div>
               <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
             </div>
@@ -102,20 +95,13 @@
     <div class="row" >
       <div class="col-md-3 col-sm-4 col-xs-12" *ngFor="let r of surveyResults">
         <div class="white-card-box search-result">
-          <h5 class="box-title" *ngIf="r.dbType === 'domain_filter'">
+          <h5 class="box-title">
             {{r.domainDisplay}}
-          </h5>
-          <h5 class="box-title" *ngIf="r.dbType === 'survey'">
-            Survey: {{r.domainDisplay}}
           </h5>
           <div class="card-stat">
             {{r.countValue | number}}
           </div>
-          <p *ngIf="r.dbType === 'domain_filter'" class="card-text bigger">
-            There are {{r.countValue | number}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants | number}}
-            total participants.
-          </p>
-          <p *ngIf="r.dbType === 'survey'" class="card-text bigger">
+          <p class="card-text bigger">
             There are {{r.countValue }} survey questions on this survey related to your search.
           </p>
 
