--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -11,10 +11,9 @@
   <div class="col-md col-xs-12" *ngIf="ageAnalysis" >
     <app-chart [analysis]="ageAnalysis" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
   </div>
-  <div class="col-md col-xs-12" *ngIf="!showSources" >
-    <button class="btn primary" click="toggleSourceConcepts()"> Show Sources </button>
-  </div>
-  <div class="col-md col-xs-12" *ngIf="showSources && sourceConcepts && sourceConcepts.length > 0" >
-    <app-chart [concepts]="sourceConcepts" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
+
+  <div class="col-md col-xs-12" >
+    <button class="btn primary" (click)="toggleSourceConcepts()"> Show Sources </button>
+    <app-chart *ngIf="sourceConcepts && sourceConcepts.length > 0"  [concepts]="sourceConcepts" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
   </div>
 </div>
