RW-667 Text field should be active on "enter invitation code" screen

--- a/ui/src/app/views/profile-page/component.css
+++ b/ui/src/app/views/profile-page/component.css
@@ -42,9 +42,16 @@ div.field {
   margin-right: 2rem;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  input[type=text]:not([readonly]) {
+    padding: 0.75rem;
+  }
+}
+
 input[type=text]:not([readonly]) {
-  padding: 0.75rem;
   width: 15rem;
+  line-height: 1.5rem;
+  height: 1.5rem;
 }
 
 label {
