--- a/ui/src/app/styles/inputs.css
+++ b/ui/src/app/styles/inputs.css
@@ -1,3 +1,17 @@
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  input[type=date]:not([readonly]),
+  input[type=datetime-local]:not([readonly]),
+  input[type=email]:not([readonly]),
+  input[type=number]:not([readonly]),
+  input[type=password]:not([readonly]),
+  input[type=tel]:not([readonly]),
+  input[type=text]:not([readonly]),
+  input[type=time]:not([readonly]),
+  input[type=url]:not([readonly]) {
+    padding: 1rem;
+ }
+}
+
 input[type=date]:not([readonly]),
 input[type=datetime-local]:not([readonly]),
 input[type=email]:not([readonly]),
@@ -7,10 +21,12 @@ input[type=tel]:not([readonly]),
 input[type=text]:not([readonly]),
 input[type=time]:not([readonly]),
 input[type=url]:not([readonly]) {
-  padding: 1rem;
   border-radius: 5px;
   background-color: white;
+  line-height: 1rem;
+  height: 1rem;
 }
+
 
 label {
   color: #262262;
