RW-739 FireFox OSX Text Field Display & RW-743 (#899)
* RW-667 Text field should be active on "enter invitation code" screen

* remove redundant code

* space

* extra line

--- a/ui/src/app/styles/inputs.css
+++ b/ui/src/app/styles/inputs.css
@@ -7,9 +7,10 @@ input[type=tel]:not([readonly]),
 input[type=text]:not([readonly]),
 input[type=time]:not([readonly]),
 input[type=url]:not([readonly]) {
-  padding: 1rem;
   border-radius: 5px;
   background-color: white;
+  line-height: 1.5rem;
+  height: 1.5rem;
 }
 
 label {
