--- a/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.html
+++ b/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.html
@@ -3,7 +3,7 @@
   <h4>Participant {{ participant?.participantId }}</h4>
   <hr/>
   <div class="demographics-info">
-    <div>DOB: {{ participant.dob | date:'yyyy-MM-dd'}}</div>
+    <div>DOB: {{ participant.birthDate }}</div>
     <div>Gender: {{ participant.gender | titlecase }}</div>
     <div>Race: {{ participant.race }}</div>
     <div>Ethnicity: {{ participant.ethnicity }}</div>
