--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -29,7 +29,7 @@
             Participants
           </h5>
           <div class="card-stat">
-            5K - 12K
+            > {{minParticipantCount | number}}
           </div>
           <p class="card-text bigger">
             out of {{totalParticipants | number}}
