--- a/public-ui/src/app/views/ehr-view/ehr-view.component.css
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.css
@@ -1,6 +1,9 @@
 .row.search {
     margin: .25rem;
 }
-.white-card-box {
+.white-card-box{
     padding: .25rem;
+}
+.white-card-box.top-stat {
+    padding: 1rem;
 }
