--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -5,19 +5,11 @@
       <h2 class="view-title"> {{title}}</h2>
       <p class="view-sub-title">{{subTitle}} </p>
     </div>
-    <div class="white-box" >
-      <div class="row search">
-        <div class="col-xs-12 lex-xs-middle search-input-full ">
-          <div class="search-wrapper">
-            <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
-            <input type="text" id="search-db" placeholder="Keyword Search" [(ngModel)]="searchText">
-          </div>
-        </div>
-      </div>
+    <div class="white-card-box" >
 
       <div class="box-header">
-        <div class="box-title"> Survey Modules</div>
-        <div class="box-sub-title"> Explore each survey in depth. Click to view an interactive version of each survey response with distributions by age and gender.</div>
+        <h5 class="box-title"> Survey Modules</h5>
+        <p class="box-sub-title"> Explore each survey in depth. Click to view an interactive version of each survey response with distributions by age and gender.</p>
       </div>
 
       <div class="cards row">
@@ -30,7 +22,7 @@
             </div>
             <div class="card-block">
               <div class="card-title">
-                {{survey.numParticipants}} Participants
+                {{survey.countValue | number}} Participants
               </div>
               <div class="card-text smaller">
                 {{survey.domainDesc}}
