--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -33,8 +33,7 @@
           </div>
           <p class="card-text bigger">
             out of {{totalParticipants | number}}
-            total participants with one or more {{dbDomain.domainDisplay.toLowerCase()}} relevant to
-            <span class="keyword" > {{searchText}} </span>.
+            total participants with one or more relevant {{dbDomain.domainDisplay.toLowerCase()}}.
           </p>
 
           <div class="card-text bottom info-text">
