--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -14,6 +14,6 @@
 
   <div class="col-md-4 col-xs-12 chart" >
     <!--<button class="btn btn-link btn-sm" (click)="toggleSourceConcepts()"> Show Sources </button>-->
-    <app-chart *ngIf="sourceConcepts && sourceConcepts.length > 0" [title]='Sources' [concepts]="sourceConcepts" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
+    <app-chart *ngIf="sourceConcepts && sourceConcepts.length > 0" [concepts]="sourceConcepts" [pointWidth]="20" [backgroundColor]="backgroundColor" [chartTitle]="'Sources'"> </app-chart>
   </div>
 </div>
