--- a/public-ui/src/app/styles/cards.css
+++ b/public-ui/src/app/styles/cards.css
@@ -1,7 +1,9 @@
 .card {
-    border-radius: 0.2rem;
-    box-shadow: 0 0.125rem 0.125rem 0 #d7d7d7;
+    border-radius: 5px;
+    box-shadow: none;
     font-family: "Gotham HTF", open-sans, sans-serif;
+    border: 1px solid #979797;
+    background-color: #FFFFFF;
 }
 
 .card * {
