Clearer disabled styling

--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -209,8 +209,12 @@
     cursor: pointer;
 }
 
-.card *.button:hover {
+.card *.button:active:hover {
     background: #4356a7;
+}
+
+.card *.button:disabled {
+    cursor: auto;
 }
 
 .bottom-banner {
