--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
@@ -9,8 +9,18 @@
         Select Criteria <clr-icon shape="caret down"></clr-icon>
       </button>
       <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
+        <h4 class="dropdown-header">Program Data</h4>
         <button
-          *ngFor="let criteria of criteriaTypes"
+          *ngFor="let criteria of programTypes"
+          id="criteria.type"
+          class="dropdown-item"
+          type="button"
+          (click)="launchWizard(criteria.type)"
+          clrDropdownItem>{{criteria.name}}</button>
+        <div class="dropdown-divider"></div>
+        <h4 class="dropdown-header">Domains</h4>
+        <button
+          *ngFor="let criteria of domainTypes"
           id="criteria.type"
           class="dropdown-item"
           type="button"
