--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -65,9 +65,9 @@
           </div>
         </div>
       </div>
-
-
-
+      <div class="col-xs-12" *ngIf="!surveyResults || surveyResults.length === 0">
+        <h6> No Survey Results </h6>
+      </div>
     </div>
 
   </div>
