--- a/ui/src/app/views/bug-report/component.css
+++ b/ui/src/app/views/bug-report/component.css
@@ -13,3 +13,19 @@
 .notebook-logs {
   display: inline-block;
 }
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.error {
+  color: #DC5030;
+  background-color: #FFF1F0;
+  height: 40px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  align-items: center;
+}
