--- a/ui/src/app/views/profile-page/component.css
+++ b/ui/src/app/views/profile-page/component.css
@@ -136,3 +136,14 @@ hr {
   width: 14rem;
   color: #C5C5C5;
 }
+
+.error {
+  color: #DC5030;
+  background-color: #FFF1F0;
+  height: 40px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
