--- a/ui/src/app/views/settings/component.css
+++ b/ui/src/app/views/settings/component.css
@@ -1,3 +1,19 @@
 .notebook-settings {
   margin-top: 1rem;
 }
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.error {
+  color: #DC5030;
+  background-color: #FFF1F0;
+  height: 40px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  align-items: center;
+}
