--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -40,7 +40,7 @@
 </clr-button-group>
 <clr-modal [(clrModalOpen)]="workspaceDeletionError">
   <h3 class="modal-title">Error:</h3>
-  <div class="modal-body">Could not delete workspace {{workspace.name}}.</div>
+  <div class="modal-body">Could not delete workspace '{{workspace.name}}'.</div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="workspaceDeletionError = false">Ok</button>
   </div>
